--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <modules>
@@ -14,11 +13,11 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.4.1</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <groupId>guru.springframework</groupId>
   <artifactId>sfg-pet-clinic</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <name>sfg-pet-clinic</name>
   <description>SFG Pet Clinic Project</description>
 
@@ -32,18 +31,20 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <configuration>
-          <goals>install</goals>
-        </configuration>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-release-plugin</artifactId>-->
+<!--        <configuration>-->
+<!--          <goals>install</goals>-->
+<!--          <autoVersionSubmodules>true</autoVersionSubmodules>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
     </plugins>
   </build>
 
-  <scm>
-    <developerConnection>scm:git:git@github.com:fleksso99/sfg-pet-clinic.git</developerConnection>
-  </scm>
+<!--  <scm>-->
+<!--    <developerConnection>scm:git:git@github.com:fleksso99/sfg-pet-clinic.git</developerConnection>-->
+<!--    <tag>sfg-pet-clinic-0.0.1</tag>-->
+<!--  </scm>-->
 
 </project>
